--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-
-
-
+</head> 
 
 <body>
     <!-- header -->
@@ -19,7 +16,7 @@
         <div class="header-img-div">
             <img class="header-img" src="./images/logo-black.svg" alt="">
         </div>
-<!-- navigation -->
+    <!-- navigation -->
         <nav>
             <a href="#">Features </a>
             <a href="#">Team </a>
@@ -36,11 +33,8 @@
             </div>
             <!-- container-2 -->
             <div class="session-1-container-2">
-                <h1 class="session-1-head-1">All your files in one secure location, accessible
-    anywhere.</h1>
-                <p class="session-1-para-1">Fylo stores your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends, family,
-    and co-workers.</p>
+                <h1 class="session-1-head-1">All your files in one secure location, accessible anywhere.</h1>
+                <p class="session-1-para-1">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
                 <div class="session-1-sub-container">
                     <input class="session-1-input" placeholder="Enter your mail" type="text" name="" id="">
                     <a class="session-1-btn-1" href="#">Get Started</a>
@@ -57,19 +51,14 @@
             <!-- container-2 -->
             <div class="session-2-container-2">
                 <h2 class="session-2-head-2">Stay productive, wherever you are</h2>
-                <p class="session-2-para-1">Never let
-    location be an issue when accessing your files. Fylo has you covered for all
-    of your file storage needs.<br><br> Securely share files and folders with friends,
-    family and colleagues for live collaboration. No email attachments required!</p>
+                <p class="session-2-para-1">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.<br><br> Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
                 <div class="session-2-sub-container-1">
                     <a class="session-2-link-1" href="">See how Fylo works</a>
                     <img class="session-2-img-2" src="./images/icon-arrow.svg" alt="">
                 </div>
                 <div class="session-2-sub-container-2">
                     <img class="session-2-img-3" src="./images/icon-quotes.svg" alt="">
-                    <p class="session-2-para-2">Fylo has improved our team productivity by an order of
-    magnitude. Since making the switch our team has become a well-oiled
-    collaboration machine.</p>
+                    <p class="session-2-para-2">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
                     <div class="session-2-sub-container-3">
                         <img class="session-2-img-4" src="./images/avatar-testimonial.jpg" alt="">
                         <p class="session-2-para-3"><strong>Kyle Burton </strong><br>Founder & CEO, Huddle</p>
@@ -83,11 +72,8 @@
      <div class="info-box">
         <!-- container-1 -->
         <div class="info-box-container-1">
-            <h2 class="info-box-head-1">Get early access
-    today</h2>
-            <p class="info-box-para-1">It only takes a minute to sign up and our free starter tier is
-    extremely generous. If you have any questions, our support team would be
-    happy to help you.</p>
+            <h2 class="info-box-head-1">Get early access today</h2>
+            <p class="info-box-para-1">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
         </div>
         <!-- container-2 -->
         <div class="info-box-container-2">
